Fixed issue with icons not showing when minimal font size is set #48

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -111,7 +111,6 @@ button.mat-icon-button {
     width:20px;
     height:20px;
     line-height: 20px !important;
-    font-size: 1px !important;
     mat-icon {
         width: 12px;
         height: 12px;
